# agentward

./: .gitignore  Dockerfile  LICENSE  LICENSE-CHANGE.md  README.md  glama.json  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml  deploy-site.yml  publish.yml
agentward/: __init__.py  banner.py  cli.py  init.py  map.py  mcp_server.py  setup.py  status.py
agentward/audit/: integrity.py  logger.py  reader.py  syslog_formatter.py
agentward/baseline/: __init__.py  anomaly.py  models.py  tracker.py
agentward/comply/: __init__.py  controls.py  report.py
agentward/comply/frameworks/: __init__.py  dora.py  eu_ai_act.py  gdpr.py  hipaa.py  mifid2.py  pci_dss.py  sox.py
agentward/configure/: generator.py
agentward/deobfuscation/: __init__.py  decoder.py  integration.py  middleware.py
agentward/inspect/: classifier.py  enforcer.py  role_cache.py  roles.py
agentward/policy/: constraints.py  diff.py  engine.py  loader.py  protected_paths.py  schema.py
agentward/preinstall/: __init__.py  _worker.py  models.py  report.py  scanner.py
agentward/preinstall/checks/: __init__.py  exec_hooks.py  (+3 more)
agentward/proxy/: approval.py  chaining.py  circuit_breaker.py  content.py  http.py  judge.py  llm.py  protocol.py  server.py  telegram_approval.py
agentward/registry/: __init__.py  models.py  npm_advisories.py  registry.py
agentward/report/: __init__.py  evidence_pack.py
agentward/sanitize/: __init__.py  engine.py  extractors.py  models.py  redactors.py
agentward/scan/: chains.py  compliance_hints.py  config.py  dep_integrity.py  enumerator.py  explainer.py  html_report.py  npm_scanner.py  openclaw.py  permissions.py  pth_scanner.py  python_scanner.py  recommendations.py  report.py  sarif_report.py  skills.py
agentward/session/: __init__.py  analyzer.py  buffer.py  cli.py  patterns.py  policy.py
agentward/testing/: __init__.py  cli.py  loader.py  models.py  reporter.py  runner.py
blog/: mcp-audit-hn.md  mcp-audit.md
blog/audit-data/: chain-analysis.md  mcp-config.json  rubric.md  scan-results.json
docs/: demo.tape
docs/Site/: about.html  agentward-landing.jsx  blog-mcp-audit.html  compare.html  docs.html  how-it-works.html  incidents.html  index.html  scan-options.html
examples/hardened-mcp/: README.md  agentward.yaml  mcp.json.template  setup.sh
examples/openclaw-hardened/: agentward.yaml  mcp.json  setup.sh
npm/: index.js  install.js  package.json
scripts/: demo-mock-mcp-server.py  demo-tools-server.py  seed-demo-audit-log.py  smoke.sh
tests/: test_agentward_test.py  test_approval.py  test_approval_tty.py  test_audit_integrity.py  test_audit_reader.py  test_audit_redaction.py  test_audit_syslog.py  test_baseline.py  test_boundary_enforcer.py  test_chaining_tracker.py  test_classifier.py  test_compliance_hints.py  test_comply.py  test_comply_dora.py  test_comply_eu_ai_act.py  test_comply_gdpr.py  test_comply_mifid2.py  test_comply_pci_dss.py  test_comply_sox.py  test_conditional_approval.py  test_configure.py  test_constraints.py  test_constraints_stress.py  test_content.py  test_critical_fixes.py  test_default_action.py  test_deobfuscation.py  test_deobfuscation_xor.py  test_dep_integrity.py  test_dry_run.py  test_explainer.py  test_init.py  test_llm_judge.py  test_map.py  test_npm_advisories.py  test_policy_diff.py  test_policy_engine.py  test_policy_schema.py  test_preinstall.py  test_protected_paths.py  (+30 more)
tests/fixtures/: capability_policy.yaml  full_policy.yaml  mcp_messages.py  sanitize_clean.txt  sanitize_sample.txt  simple_policy.yaml
(+43 files in other folders)
