[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentward"
version = "0.5.0"
description = "Secure every agent action — from install to runtime. Source-available security platform for AI agents."
readme = "README.md"
license = "BUSL-1.1"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "OpenSafe Inc." },
]
keywords = ["ai", "agents", "mcp", "security", "permissions", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.optional-dependencies]
sanitize = [
    "pypdf>=4.0",
    "spacy>=3.7",
]
# Backward-compatible alias — all judge deps are now in core dependencies.
judge = []

[project.scripts]
agentward = "agentward.cli:app"
agentward-mcp-server = "agentward.mcp_server:main"

[project.urls]
Homepage = "https://agentward.ai"
Repository = "https://github.com/agentward-ai/agentward"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]
